--- a/Website Template 7/index.html
+++ b/Website Template 7/index.html
@@ -3,12 +3,12 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="title" content="suicide"/>
-		<meta name="og:title" content="suicide"/>
+		<meta name="title" content="klook"/>
+		<meta name="og:title" content="klook"/>
 		<meta name="og:type" content="website"/>
-		<meta name="og:url" content="https://suicide.ooo"/>
+		<meta name="og:url" content="https://klook.club"/>
 		<meta name="theme-color" content="#a83232">
-		<title>suicide</title>
+		<title>klook/title>
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -25,7 +25,7 @@
 			<div id="bgTint"></div>
 		</div>
 		<div id="title" class="center">
-			<span class="title">suicide.<span id="titlePW">ooo</span></span>
+			<span class="title">klook<span id="titlePW">club</span></span>
 		</div>
 		<div id="blocks" class="center"></div>
 		<script src="script.js"></script>
