--- a/Website Template 7/index.html
+++ b/Website Template 7/index.html
@@ -8,7 +8,7 @@
 		<meta name="og:type" content="website"/>
 		<meta name="og:url" content="https://klook.club"/>
 		<meta name="theme-color" content="#a83232">
-		<title>klook/title>
+		<title>klook</title>
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
