--- a/Website Template 7/index.html
+++ b/Website Template 7/index.html
@@ -25,7 +25,7 @@
 			<div id="bgTint"></div>
 		</div>
 		<div id="title" class="center">
-			<span class="title">klook<span id="titlePW">club</span></span>
+			<span class="title">klook.<span id="titlePW">club</span></span>
 		</div>
 		<div id="blocks" class="center"></div>
 		<script src="script.js"></script>
