--- a/Website Template 4/index.html
+++ b/Website Template 4/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	<title>suicide.ooo</title>
+	<title>klook.club/title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="keywords" content="cluee">
@@ -56,12 +56,12 @@
 	            <div class="content fadetitle">
             </div>
 	<div class="title fadetitle">
-		<span>suicide</span>
+		<span>klook</span>
 	</div>
 <div class="menu fadelinks">
-	<div class="link grow hvr-overline-from-center"><a class="fab fa-steam" href="https://steamcommunity.com/id/xxxtentacion" target="_blank"></a></div>
-	<div class="link grow hvr-overline-from-center"><a class="fab fa-instagram" href="https://instagram.com/xoxo" target="_blank"></a></div>
-	<div class="link grow hvr-overline-from-center"><a class="fab fa-twitter" href="https://twitter.com/briankrebs" target="_blank"></a></div>
+	<div class="link grow hvr-overline-from-center"><a class="fab fa-discord" href="https://discord.com/users/662051839016960020" target="_blank"></a></div>
+	<div class="link grow hvr-overline-from-center"><a class="fab fa-envelope" href="https://shiba.bar" target="_blank"></a></div>
+	<div class="link grow hvr-overline-from-center"><a class="fab fa-link" href="https://solo.to/3k" target="_blank"></a></div>
 </div>
 				<input
 					type="range"
