--- a/Website Template 4/index.html
+++ b/Website Template 4/index.html
@@ -60,8 +60,8 @@
 	</div>
 <div class="menu fadelinks">
 	<div class="link grow hvr-overline-from-center"><a class="fab fa-discord" href="https://discord.com/users/662051839016960020" target="_blank"></a></div>
-	<div class="link grow hvr-overline-from-center"><a class="fab fa-envelope" href="https://shiba.bar/mail" target="_blank"></a></div>
-	<div class="link grow hvr-overline-from-center"><a class="fab fa-link" href="https://solo.to/3k" target="_blank"></a></div>
+	<div class="link grow hvr-overline-from-center"><a class="fas fa-envelope" href="https://shiba.bar" target="_blank"></a></div>
+	<div class="link grow hvr-overline-from-center"><a class="fas fa-link" href="https://solo.to/3k" target="_blank"></a></div>
 </div>
 				<input
 					type="range"
