--- a/Website Template 4/index.html
+++ b/Website Template 4/index.html
@@ -60,7 +60,7 @@
 	</div>
 <div class="menu fadelinks">
 	<div class="link grow hvr-overline-from-center"><a class="fab fa-discord" href="https://discord.com/users/662051839016960020" target="_blank"></a></div>
-	<div class="link grow hvr-overline-from-center"><a class="fas fa-envelope" href="https://radiant.cool" target="_blank"></a></div>
+	<div class="link grow hvr-overline-from-center"><a class="fas fa-envelope" href="https://crysis.email" target="_blank"></a></div>
 	<div class="link grow hvr-overline-from-center"><a class="fas fa-link" href="https://solo.to/3k" target="_blank"></a></div>
 </div>
 				<input
